[package]
name = "actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_tuple = "0.5"
fil_actors_runtime = { git = "https://github.com/consensus-shipyard/fvm-utils", features = ["fil-actor"] }
fvm_shared = { version = "=3.0.0-alpha.17", default-features = false }
fvm_ipld_encoding = "0.3.3"
serde = { version = "1.0.136", features = ["derive"] }
num-traits = "0.2.14"
num-derive = "0.3.3"
primitives = { git = "https://github.com/consensus-shipyard/fvm-utils"}
fvm_ipld_blockstore = "0.1.1"
anyhow = "1.0.56"

[dev-dependencies]
# Enable test-utils only in dev
fil_actors_runtime = { git = "https://github.com/consensus-shipyard/fvm-utils", features = ["fil-actor", "test_utils"] }

[build-dependencies]
wasm-builder = "3.0.1"